añadiendo el pie de la pagina

--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
                 </div>
             </aside>
         </section>
+    </main>
+
+    <footer class="footer">
+        <p>Blog Tecnológico - 2020 </p>
+    </footer>
 </body>
 
 </html>
